--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 :root {
     --montserrat: font-family: 'Montserrat', sans-serif;
@@ -10,11 +10,39 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+/* Text styles */
 
-.page-text {
-    font-weight: 400;
-}
+    /* main text font for classic pages */
+        .page-text {font-weight: 400;}
+    
+    
+    
+    /* text for card and smaller components */
 
-.italic {
-    font-style: italic;
+        /* titles */
+        .card-title {font-size: 16px;}
+        /* main text font */
+        .card-text {font-weight: 300;}
+        /* small prints, extra info at the bottom */
+        .card-small {font-weight: 200; font-style: italic;}
+
+
+        .italic {font-style: italic;}
+
+/*  ---  */
+
+
+.icon {
+    font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -moz-osx-font-smoothing: grayscale;
+    user-select: none;
 }
