--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -8,32 +8,42 @@
     --brown-hovered: #753d01;
 
     --light-blue: #0183d5;
-    --light-blue-hovered: #0183d5;
+    --light-blue-hovered: #0069aa;
 
     --dark-blue: #002f4a;
     --dark-blue-hovered: #014064;
 
     --black: rgb(20, 20, 20);
 
-    --shadow: 1px 1px 5px rgba(0, 0, 0, 0.26);
+    --shadow: 2px 2px 4px rgba(0, 0, 0, 0.493);
+
+    /* transitions */
+
+    --fadeQuick: 200ms ease;
 }
 
 /* main colors */
     /* Background colors */
-    .blueBG {background-color: var(--blue);}
+    .lightBlueBG {background-color: var(--light-blue);}
+    .darkBlueBG {background-color: var(--dark-blue);}
     .greenBG {background-color: var(--green);}
     .brownBG {background-color: var(--brown);}
 
     /* Any text inside a colored background */
-    .blueBG *, .greenBG *, .brownBG * {
+        .lightBlueBG *, .darkBlueBG *, .greenBG *, .brownBG * {
         color: white;
     }
 
 
 /* Components that react to user actions */
-    .blue_action {background-color: var(--blue);}
+    .blue_action {
+        background-color: var(--light-blue);
+        transition: var(--fadeQuick);
+    }
     .blue_action:hover {
-        background-color: var(--blue-hovered);
+        background-color: var(--light-blue-hovered);
+        box-shadow: var(--shadow);
+        transition: var(--fadeQuick);
     }
 
     .green_action {background-color: var(--green);}
