--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap');
 
 :root {
     --montserrat: font-family: 'Montserrat', sans-serif;
@@ -10,10 +11,18 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.oleo {
+    font-family: 'Oleo Script', cursive;
+}
+
 /* Text styles */
 
     /* main text font for classic pages */
-        .page-text {font-weight: 400;}
+        .page-text {
+            font-size: 18px;
+            font-weight: 400;
+            color: var(--dark-blue);
+        }
     
     
     
@@ -31,21 +40,6 @@
 
 /*  ---  */
 
-
-/* .icon {
-    font-family: 'Material Symbols Outlined';
-    font-weight: normal;
-    font-style: normal;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    -moz-osx-font-smoothing: grayscale;
-    user-select: none;
-} */
 
 .icon {
     font-family: 'Material Icons';
