--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -1,6 +1,11 @@
 .w100 {width: 100%;}
 .h100 {height: 100%;}
 
+.mainWidth {
+    width: min(100%, 1500px);
+    margin: auto;
+}
+
 .block {display: block;}
 
 .flex {display: flex;}
@@ -44,7 +49,7 @@
 .absolute {position: absolute;}
 .absolutlyCentered {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 
-.mainWidth { width: min(100%, 1200px); margin: auto;}
+
 
 .objectFitCover {
     width: 100%;
