--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -19,19 +19,19 @@
 /* Text styles */
 
     /* main text font for classic pages */
-        .page-text {
-            font-weight: 300;
-        }
+
 
         @media (max-width: 719px) {
             .page-text {
+                font-weight: 300;
                 font-size: 16px;
             }
         }
 
         @media (min-width: 720px) {
             .page-text {
-                font-size: 16px;
+                font-weight: 400;
+                font-size: 18px;
                 line-height: 24px;
             }
         }
@@ -40,22 +40,29 @@
         .intro-text {
             font-weight: 500;
             color: var(--dark-blue);
+            margin: 20px 0;
         }
 
         @media (max-width: 719px) {
-            .page-text {
+            .intro-text {
                 font-size: 18px;
             }
         }
 
         @media (min-width: 720px) {
-            .page-text {
-                font-size: 17px;
+            .intro-text {
+                font-size: 20px;
                 letter-spacing: 0px;
                 line-height: 24px;
             }
         }
-    
+        
+        /* more info text */
+
+        .breadcrumbs-text {
+            font-weight: 400;
+            font-size: 15px;
+        }
     
     
     /* text for card and smaller components */
@@ -76,3 +83,6 @@
 .icon {
     font-family: 'Material Icons';
 }
+
+/* classic section text styles */
+
