--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,10 @@
 :root {
     --top-bar-height: 5vh;
+    --main-width: min(100%, 1200px);
 }
 
 .mainWidth {
-    width: min(100%, 1200px);
+    width: var(--main-width);
     padding: 0 20px;
 }
 
@@ -12,7 +13,7 @@ main {
 }
 
 
-.whiteSection .sectionContent .shoeBox .foot svg g .pied {
+.whiteSection  {
     fill: var(--brown);
 }
 
@@ -27,7 +28,7 @@ main {
 .blueSection .sectionContent * {
     color: white;
 }
-.blueSection .sectionContent .shoeBox .foot svg g .pied {
+.blueSection * {
     fill: var(--brown);
 }
 
@@ -40,7 +41,7 @@ main {
     color: white;
 }
 
-.brownSection .sectionContent .shoeBox .foot svg g .pied {
+.brownSection * {
     fill: white;
 }
 
@@ -49,7 +50,24 @@ main {
     flex-direction: row-reverse;
 }
 
+.externalLink {
+    display: inline-block;
+    position: relative;
+    font-weight: 600;
+}
+
+.externalLink::after {
+    content: '';
+    width: 100%;
+    height: 10px;
+    background: linear-gradient(180deg, rgba(0, 128, 0, 1) 0%, rgba(255, 255, 255, 1) 100%);
+    display: block;
+    top: 75%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.7;
+}
 
 
 
-
+/* external links */
