--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -7,6 +7,7 @@
 }
 
 .block {display: block;}
+.inline {display: inline;}
 
 .flex {display: flex;}
 .column {flex-direction: column;}
@@ -40,18 +41,24 @@
 .fixed {position: fixed;}
 .sticky {position: sticky;}
 
+/* these are deprecated */
 .top {top: 0;}
 .right {right: 0;}
+/*  */
+
+.top0 {top: 0;}
+.right0 {right: 0;}
 
 .pointer {cursor: pointer;}
 
 .relative {position: relative;}
 .absolute {position: absolute;}
 .absolutlyCentered {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
+.absoluteFull {position: absolute; top: 0; left: 0; right: 0; bottom: 0;}
 
 
-
-.objectFitCover {
+.objectFitCover {width: 100%; height: 100%; object-fit: cover;}
+.objectFitContained {
     width: 100%;
     height: 100%;
     object-fit: cover;
