--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -87,11 +87,11 @@
     background-color: var(--dark-blue);
 }
 
-.brownTallCards {
+.brownTallCard {
     background-color: var(--brown);
 }
 
 .blueTallCard *,
-.brownTallCards *{
+.brownTallCard *{
     color: white;
 }
