--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,8 @@
     --main-width: min(100%, 1200px);
 }
 
+
+
 .mainWidth {
     width: var(--main-width);
     padding: 0 20px;
@@ -50,6 +52,8 @@ main {
     flex-direction: row-reverse;
 }
 
+/* external links */
+
 .externalLink {
     display: inline-block;
     position: relative;
@@ -68,6 +72,7 @@ main {
     opacity: 0.7;
 }
 
+/* slotted sections text content */
 
 
-/* external links */
+ 
