--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -54,11 +54,7 @@
 
 
 .objectFitCover {width: 100%; height: 100%; object-fit: cover;}
-.objectFitContained {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+.objectFitContained {width: 100%; height: 100%; object-fit: contain;}
 
 
 .marTop20 {margin-top: 20px;}
