--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -42,7 +42,7 @@
         .intro-text {
             font-weight: 500;
             color: var(--dark-blue);
-            padding: 50px 0;
+            padding: 50px 0 0 0;
         }
 
         @media (max-width: 719px) {
