--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,51 @@
     opacity: 0.7;
 }
 
-/* slotted sections text content */
+/* date card in agenda */
 
 
  
+
+ .dateCard {
+     width: 400px;
+     background-color: #fff;
+     padding: 20px;
+     box-shadow: var(--shadow);
+     border-radius: 10px;
+ }
+
+ .dateCard .topBox .title {
+     font-size: 20px;
+     font-weight: 600;
+ }
+
+ .dateCard .topBox .location,
+ .dateCard .topBox .organiser {
+     font-size: 15px;
+     color: var(--brown);
+     padding-left: 5px;
+ }
+ .dateCard .topBox .date {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--brown);
+ }
+
+ .dateCard .middleBox {
+     margin: 10px 0;
+     aspect-ratio: 5/4;
+ }
+
+ .dateCard .middleBox .frame {
+     width: 100%;
+     height: 100%;
+ }
+
+ .dateCard .middleBox .frame img {
+     border-radius: 5px;
+     /* box-shadow: var(--shadow); */
+ }
+
+ .dateCard .bottom .content {
+     font-size: 14px;
+ }
