--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -20,6 +20,7 @@
 .alignStart {align-items: flex-start;}
 .alignEnd {align-items: flex-end;}
 .alignStretch {align-items: stretch;}
+.alignEvenly {align-items: space-evenly;}
 
 .gap5 {gap: 5px;}
 .gap10 {gap: 10px;}
