--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -21,6 +21,7 @@
 .alignEnd {align-items: flex-end;}
 .alignStretch {align-items: stretch;}
 .alignEvenly {align-items: space-evenly;}
+.alignBetween {align-items: space-between;}
 
 .gap5 {gap: 5px;}
 .gap10 {gap: 10px;}
