--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -18,44 +18,35 @@
 
 /* Text styles */
 
+        .section-addres-text {
+            font-style: italic;
+        }
+
+
     /* main text font for classic pages */
         .page-text-bold {
             font-weight: 600;
         }
 
         @media (max-width: 719px) {
-            .page-text {
-                font-weight: 300;
-                font-size: 16px;
+            .page-text { font-weight: 300; font-size: 16px;
             }
         }
 
         @media (min-width: 720px) {
-            .page-text {
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 24px;
+            .page-text { font-weight: 400; font-size: 16px; line-height: 24px;
             }
         }
 
         /* intro text at top of pages */
-        .intro-text {
-            font-weight: 500;
-            color: var(--dark-blue);
-            padding: 50px 0 0 0;
-        }
+        .intro-text { font-weight: 500; color: var(--dark-blue); padding: 50px 0 0 0; }
 
         @media (max-width: 719px) {
-            .intro-text {
-                font-size: 18px;
-            }
+            .intro-text { font-size: 18px; }
         }
 
         @media (min-width: 720px) {
-            .intro-text {
-                font-size: 20px;
-                letter-spacing: 0px;
-                line-height: 24px;
+            .intro-text { font-size: 20px; letter-spacing: 0px; line-height: 24px;
             }
         }
         
