--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -18,7 +18,8 @@
 
 /* Text styles */
 
-        .section-addres-text {
+        .section-address-text {
+            font-size: 16px;
             font-style: italic;
         }
 
