--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,7 +67,7 @@
     display: inline-block;
     position: relative;
     font-weight: 600;
-    
+    font-style: italic;
     border-width: 2px;
     border-style: solid;
     border-right: none;
