--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -26,6 +26,7 @@
 .gap5 {gap: 5px;}
 .gap10 {gap: 10px;}
 .gap20 {gap: 20px;}
+.gap50 {gap: 50px;}
 
 .centered {display: grid;place-items: center;}
 
@@ -60,6 +61,9 @@
 
 
 .marTop20 {margin-top: 20px;}
+.marTop50 { margin-top: 50px; }
+.marTop100 { margin-top: 100px; }
+.marTop150 { margin-top: 150px; }
 
 .pad10 {padding: 10px;}
 
