--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -56,7 +56,7 @@
 .absoluteFull {position: absolute; top: 0; left: 0; right: 0; bottom: 0;}
 
 
-.objectFitCover {width: 100%; height: 100%; object-fit: cover;}
+.objectFitCover {width: 100%; height: 100%; object-fit: cover; object-position: center;}
 .objectFitContained {width: 100%; height: 100%; object-fit: contain;}
 
 
