--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -58,7 +58,11 @@
 .absoluteFull {position: absolute; top: 0; left: 0; right: 0; bottom: 0;}
 
 
-.objectFitCover {width: 100%; height: 100%; object-fit: cover; object-position: center;}
+.objectFitCover {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+}
 .objectFitContained {width: 100%; height: 100%; object-fit: contain;}
 .objectFitContain {width: 100%;height: 100%;object-fit: contain;}
 
