--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -62,6 +62,7 @@
     width: 100%; 
     height: 100%; 
     object-fit: cover;
+    /* object-position: center; */
 }
 .objectFitContained {width: 100%; height: 100%; object-fit: contain;}
 .objectFitContain {width: 100%;height: 100%;object-fit: contain;}
