--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@
     color: white;
 }
 .blueSection * {
-    fill: white;
+    fill: var(--brown);
 }
 
 
@@ -192,4 +192,43 @@
 .activeDefaultFilterButton {
     background-color: var(--light-blue);
     color: #fff;
+}
+
+/* procès verbaus et publications réglementaires */
+
+.mairieDocCard {
+    width: 210px;
+    height: 248px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.mairieDocCard figure {
+    width: 100px;
+    margin: auto;
+}
+
+.mairieDocCard figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.mairieDocCard * {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--dark-blue);
+}
+.mairieDocCard .bottomBox {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
