--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -69,10 +69,12 @@
 .objectFitContain {width: 100%;height: 100%;object-fit: contain;}
 
 
-.marTop20 {margin-top: 20px;}
-.marTop50 { margin-top: 50px; }
-.marTop100 { margin-top: 100px; }
-.marTop150 { margin-top: 150px; }
+.marTop20 {margin-top: min(20px, 1.5vw);}
+.marTop50 { margin-top: min(50px, 4vw); }
+.marTop100 { margin-top: min(100px, 6vw) }
+.marTop150 { 
+    margin-top: min(150px, 8vw); 
+}
 
 .pad10 {padding: 10px;}
 
