--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,12 @@ html {
 .mainWidth {
     width: var(--main-width);
     margin: auto;
-    padding-left: 25px;
-    padding-right: 25px; 
+    padding-left: 10px;
+    padding-right: 10px; 
+}
+.justMainWidth {
+    width: var(--main-width);
+    margin: auto;
 }
 
 .whiteSection  {
@@ -173,15 +177,15 @@ html {
 }
 
 .defaultFilterBox p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     color: white;
     margin-bottom: 20px;
 }
 
 .defaultFilterButton {
-    width: 250px;
-    font-size: 18px;
+    width: 200px;
+    font-size: 16px;
     font-weight: 600;
     color: var(--dark-blue);
     background-color: #fff;
@@ -191,7 +195,8 @@ html {
 }
 
 .defaultFilterButton:hover,
-.activeDefaultFilterButton {
+.activeDefaultFilterButton,
+.activeDefaultFilterButton * {
     background-color: var(--light-blue);
     color: #fff;
 }
