actu styles corrections

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -89,3 +89,20 @@
 sup span {
     vertical-align: initial !important;
 }
+
+/* in case of problems with font-family styles in actualités */
+
+
+/* .actuContent *,
+.actuContent * *,
+.actuContent * * * {
+    font-family: 'Montserrat', sans-serif !important;
+} */
+.actuContent ol {
+
+    padding-left: 20px;
+}
+/* .actuContent ol li{
+    list-style: inside;
+    list-style-position: outside;
+} */
