--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,26 +262,29 @@ html {
 /* proces verbaux et publication reglementaires */
 
 .publicationDocCard {
-    width: 210px;
-    height: 310px;
+    width: 250px;
     background-color: #fff;
-    padding: 20px 20px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: var(--shadow);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 15px;
+    /* overflow: hidden; */
 }
 
-/* .publicationDocCard .publicationDocCardFigure {
-    width: 100px;
-    margin: auto;
-} */
+.publicationDocCardFigure {
+    width: 100%;
+    aspect-ratio: 3/2;
+    display: flex;
+    justify-content: center;
+}
 
-.publicationDocCard .publicationDocCardFigure .publicationDocCardFigureImg {
-    width: 100px;
-    /* height: 100%; */
+.publicationDocCardFigureImg {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
